cambiando los colores

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
-    color: cadetblue;
-    background-color: darkblue;
+    color: whitesmoke;
+    background-color: crimson;
 }
 p{
-    color: darkgoldenrod;
+    color: white;
 }
