--- a/css/style.css
+++ b/css/style.css
@@ -5,5 +5,22 @@ body{
 }
 img
 {
-    margin: auto;
+    
+    width: 400px;
+    height: 400px;
+    border: solid 1px red;
+    border-radius: 50px;
+}
+#cantidad
+{
+    margin: 20px 20px 20px 20px;
+    width: 250px;
+    border-radius: 5px;
+}
+#botoncito
+{
+    width: 250px;
+    border-radius: 10px;
+    background-color: gray;
+    color: white;
 }
